--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "Resetatron",
   "version": "0.1.0",
+  "author": "Charles Peters <charlespeters42@gmail.com>",
+  "description": "Project site for Resetatron",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/charlespeters/Resetatron.git"
+  },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt": "~0.4.5",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-jshint": "^0.6.5",
+    "grunt-contrib-nodeunit": "^0.2.2",
+    "grunt-contrib-sass": "^0.6.0",
+    "grunt-contrib-uglify": "^0.2.7",
+    "grunt-contrib-watch": "^0.5.3"
   }
 }
