--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/charlespeters/resetatron",
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-pixrem": "^0.1.3",
     "gulp-plumber": "^1.0.0",
     "gulp-sass": "^1.3.3",
-    "gulp-size": "^1.2.1"
+    "gulp-size": "^1.2.1",
+    "vinyl-paths": "^1.0.0"
   }
 }
