--- a/package.json
+++ b/package.json
@@ -4,26 +4,19 @@
   "description": "reset and typographic helpers for arsenal.scss",
   "main": "index.js",
   "scripts": {
-    "test": "gulp"
+    "bundle": "node-sass ./index.scss ./dist/flexo.css -o dist --output-style expanded"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/charlespeters/resetatron.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/charlespeters/resetatron/issues"
   },
   "homepage": "https://github.com/charlespeters/resetatron",
   "devDependencies": {
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-pixrem": "^0.1.3",
-    "gulp-plumber": "^1.0.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-size": "^1.2.1",
-    "vinyl-paths": "^1.0.0"
+    "node-sass": "*"
   }
 }
